objects/Account.object
<CustomObject>
    <fields>
        <fullName>Pais_particular_Inv__c</fullName>
        <label>País particular Inv</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                    <default>true</default>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>Afganistán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyán</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladés</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Baréin</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benín</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Birmania</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Brunéi</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais_particular__c</fullName>
        <label>País particular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfil_de_Riesgo__c</fullName>
        <label>Perfil de Riesgo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerrar</fullName>
                </value>
                <value>
                    <fullName>Muy Agresivo</fullName>
                </value>
                <value>
                    <fullName>Agresivo</fullName>
                </value>
                <value>
                    <fullName>Balanceado</fullName>
                </value>
                <value>
                    <fullName>Conservador</fullName>
                </value>
                <value>
                    <fullName>Muy Conservador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfil_de_inversionista__c</fullName>
        <label>Perfil de inversionista</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantilla_Producto__c</fullName>
        <label>Plantilla Producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custodia Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plantilla_cobro__c</fullName>
        <label>Plantilla cobro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente validar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plataforma_Siga_CRM__c</fullName>
        <label>Plataforma Siga CRM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Plataforma_Torre__c</fullName>
        <label>Plataforma Torre</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Plataforma_de_captacion__c</fullName>
        <label>Plataforma de captación</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Credit_Limit__c</fullName>
        <description>Field to store Prior MAC Credit Limit  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Expiration_Date__c</fullName>
        <description>Field to store Prior MAC Expiration Date  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Presentation_Date__c</fullName>
        <description>Field to store Prior MAC Presentation Date   - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Presentation Date  </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Request_Date__c</fullName>
        <description>Field to store Prior MAC Request Date  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Request_Number__c</fullName>
        <description>Field to store Prior MAC Request Number - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Request Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Status__c</fullName>
        <description>Field to store Prior MAC Status  - for a Comité Meeting that occurs in respect to a customer.
CODIGO	DESCRIPCION
A		APROBADO
D		DIGITADO POR AUXILIAR
P		EN PROCESO POR EJECUTIVO
R		RECHAZADO
PES04	EN PROCESO COMITE
PES06	CONDICIONADO COMITE
M		MODIFICACION GCIA DE CREDITOS
PES10	MANUAL
PES07	CADUCADO</description>
        <label>Prior MAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APROBADO</fullName>
                </value>
                <value>
                    <fullName>DIGITADO POR AUXILIAR</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO POR EJECUTIVO</fullName>
                </value>
                <value>
                    <fullName>RECHAZADO</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO COMITE</fullName>
                </value>
                <value>
                    <fullName>CONDICIONADO COMITE</fullName>
                </value>
                <value>
                    <fullName>MODIFICACION GCIA DE CREDITOS</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
                <value>
                    <fullName>CADUCADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profin_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prop_sito_cuenta__c</fullName>
        <label>Propósito cuenta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intermediación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROA_12_meses__c</fullName>
        <label>ROA 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_1_dia__c</fullName>
        <label>ROA 1 día</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_30_dias__c</fullName>
        <label>ROA 30 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_7_d_image__c</fullName>
        <description>Variable de Prueba para demo de Gabriel</description>
        <formula>text(ROA_7_dias__c*100)&amp;&quot;% &quot; &amp; IF( ISBLANK(ROA_7_dias__c) ,&quot;&quot;,IMAGE(&quot;http://upper90studios.com/wp-content/uploads/2015/09/green-red-arrows.png?x77031&quot;, &quot;&quot;,15, 20))</formula>
        <label>ROA 7 d</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROA_7_dias__c</fullName>
        <label>ROA 7 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_YTD__c</fullName>
        <label>ROA YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RUT_Sociedad_participacion__c</fullName>
        <label>RUT Sociedad participación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accionista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RUT__c</fullName>
        <description>RUT para Empresas y Personas (RUT for Accounts and Person Accounts)</description>
        <externalId>true</externalId>
        <label>RUT</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUT_sin_puntos_AUX__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( RUT__c,&quot;k&quot;,&quot;K&quot;),&quot;-&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;)</formula>
        <label>RUT sin puntos AUX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raz_n_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_comercial_Inv__c</fullName>
        <label>Región comercial Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_comercial__c</fullName>
        <label>Región comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_particular_Inv__c</fullName>
        <label>Región particular Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_particular__c</fullName>
        <label>Región particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_Fotogr_fico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registro Fotográfico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registro_de_Firma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registro de Firma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relacion_Gestion_Banco__c</fullName>
        <label>Relacion Gestion Banco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No relacionado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relacion_con_corredora_Circ_1064__c</fullName>
        <label>Relación con corredora (Circ. 1064)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relacionado_con_la_corredora__c</fullName>
        <label>Relacionado con la corredora</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rentabilidad_12_meses__c</fullName>
        <label>Rentabilidad 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_1_dia__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rentabilidad 1 día</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_30_dias__c</fullName>
        <label>Rentabilidad 30 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_7_dias__c</fullName>
        <label>Rentabilidad 7 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_YTD__c</fullName>
        <label>Rentabilidad YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rep_Legal_email__c</fullName>
        <description>Utilizado para Creación Clientes PJ Inversiones</description>
        <label>Rep Legal email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requerimiento_comercial_de_la_empresa__c</fullName>
        <label>Requerimiento comercial de la empresa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_verificacion_requisitos__c</fullName>
        <label>Resultado verificación requisitos</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rut_formato_AUX__c</fullName>
        <description>Fórmula con puntos:
IF( n_AUX__c &lt;=1, RIGHT(RUT_sin_puntos_AUX__c, 1),
IF( n_AUX__c &lt;=4, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -1) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
IF( n_AUX__c &lt;=7, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -4) &amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -3, 3) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
IF( n_AUX__c &lt;=10, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -7)&amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -6, 3) &amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -3, 3) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
&quot;RUT incorrecto&quot;) ) ))</description>
        <formula>IF( n_AUX__c &lt;= 1,&quot;&quot;,LEFT( RUT_sin_puntos_AUX__c,LEN(RUT_sin_puntos_AUX__c)-1)&amp;&quot;-&quot;&amp;RIGHT(RUT_sin_puntos_AUX__c,1))</formula>
        <label>Rut formato AUX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBIF_Sector__c</fullName>
        <label>Origen Sectorial (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administradoras de Fondos</fullName>
                </value>
                <value>
                    <fullName>Agentes administradores de Mutuos Hipot.</fullName>
                </value>
                <value>
                    <fullName>Banco Central de Chile</fullName>
                </value>
                <value>
                    <fullName>Banco del Estado</fullName>
                </value>
                <value>
                    <fullName>Bancos del Exterior</fullName>
                </value>
                <value>
                    <fullName>Bancos Privados</fullName>
                </value>
                <value>
                    <fullName>Compañias seguros y filiales de la misma</fullName>
                </value>
                <value>
                    <fullName>Cooperativas de ahorro y credito</fullName>
                </value>
                <value>
                    <fullName>Corredores de bolsa y agentes valores</fullName>
                </value>
                <value>
                    <fullName>Emisores y operadores de tarj de credito</fullName>
                </value>
                <value>
                    <fullName>Empresas Publicas</fullName>
                </value>
                <value>
                    <fullName>Filial Bco Estado fisc. x otras Superint</fullName>
                </value>
                <value>
                    <fullName>Filiales bancarias fisc x la SBIF</fullName>
                </value>
                <value>
                    <fullName>Filiales del Bco del Estado Chile f.SBIF</fullName>
                </value>
                <value>
                    <fullName>Fisco, Gobierno y Org. Descentralizados</fullName>
                </value>
                <value>
                    <fullName>Gobierno y Agenc Gub del Exterior</fullName>
                </value>
                <value>
                    <fullName>Gran Mineria Cobre y Andina</fullName>
                </value>
                <value>
                    <fullName>Municipalidades</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Otros Personas o entidades residentes en el exterior</fullName>
                </value>
                <value>
                    <fullName>Personas Jur. sin Fines de Lucro</fullName>
                </value>
                <value>
                    <fullName>Personas Juridicas con fines de lucro</fullName>
                </value>
                <value>
                    <fullName>Sin clasificar</fullName>
                </value>
                <value>
                    <fullName>Sistema Previsional, Sector Privado</fullName>
                </value>
                <value>
                    <fullName>Sistema Previsional Público</fullName>
                </value>
                <value>
                    <fullName>Sociedades securitizadoras</fullName>
                </value>
                <value>
                    <fullName>Personas Naturales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SII_DJ_1820_1829__c</fullName>
        <label>SII (DJ 1820-1829)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentaci_n_BI__c</fullName>
        <label>Segmentación BI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentacion_Liquidez_Codigo__c</fullName>
        <label>Segmentacion Liquidez Codigo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minorista</fullName>
                </value>
                <value>
                    <fullName>Mayorista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentacion_Liquidez_SubCodigo__c</fullName>
        <label>Segmentacion Liquidez SubCodigo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emisores y operadores de tarjetas de credito bancarios y no bancarios</fullName>
                </value>
                <value>
                    <fullName>Sin Clasificar</fullName>
                </value>
                <value>
                    <fullName>Minoristas personas naturales</fullName>
                </value>
                <value>
                    <fullName>Otros minoristas</fullName>
                </value>
                <value>
                    <fullName>Banco Central del país</fullName>
                </value>
                <value>
                    <fullName>Tesoreria General de la República</fullName>
                </value>
                <value>
                    <fullName>Otros bancos del país</fullName>
                </value>
                <value>
                    <fullName>Cooperativas fiscalizadas por la SBIF</fullName>
                </value>
                <value>
                    <fullName>Bancos extranjeros</fullName>
                </value>
                <value>
                    <fullName>Fondos de pensiones del pais</fullName>
                </value>
                <value>
                    <fullName>Administradoras generales de fondos del país</fullName>
                </value>
                <value>
                    <fullName>Compañias de seguros del pais</fullName>
                </value>
                <value>
                    <fullName>Corredores de bolsa y agentes de valores del pais</fullName>
                </value>
                <value>
                    <fullName>Otras entidades financieras no bancarias del país</fullName>
                </value>
                <value>
                    <fullName>Mayoristas(*) no financieros del pais</fullName>
                </value>
                <value>
                    <fullName>Mayoristas(*) extranjeros no bancarios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <description>Segmentation, used in customer creation form for Personas Naturales and Jurídicas</description>
        <label>Segmentación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banca Joven</fullName>
                </value>
                <value>
                    <fullName>Banca Personas</fullName>
                </value>
                <value>
                    <fullName>Banca Preferente</fullName>
                </value>
                <value>
                    <fullName>Banca Privada</fullName>
                </value>
                <value>
                    <fullName>Banca Universitaria</fullName>
                </value>
                <value>
                    <fullName>Corporaciones</fullName>
                </value>
                <value>
                    <fullName>Empresas</fullName>
                </value>
                <value>
                    <fullName>Empresas Personales</fullName>
                </value>
                <value>
                    <fullName>Grandes Empresas</fullName>
                </value>
                <value>
                    <fullName>Persona Natural</fullName>
                </value>
                <value>
                    <fullName>Sector Financiero</fullName>
                </value>
                <value>
                    <fullName>Sector Inmobiliario y Construcción</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No es Cliente</fullName>
                </value>
                <value>
                    <fullName>Cliente Banco</fullName>
                </value>
                <value>
                    <fullName>Cliente Inversiones</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situac_Laboral__c</fullName>
        <label>Situación Laboral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SILABCEMPL</fullName>
                    <label>Trabajador Dependiente</label>
                </value>
                <value>
                    <fullName>SILABINDEP</fullName>
                    <label>Trabajador Independiente</label>
                </value>
                <value>
                    <fullName>SILABPEN</fullName>
                    <label>Pensionado</label>
                </value>
                <value>
                    <fullName>SILABSEMPL</fullName>
                    <label>Sin empleo</label>
                </value>
                <value>
                    <fullName>SILABSOC</fullName>
                    <label>Participación en una sociedad</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situacion_Laboral__c</fullName>
        <label>Situación Laboral</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socio_Solidario__c</fullName>
        <label>Socio Solidario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sí</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Socios_de_la_empresa_Grupo_Econ_mico__c</fullName>
        <label>Grupo Economico</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Sector_Economico__c</fullName>
        <label>Sub-Sector Económico</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administradoras de fondos de pensiones</fullName>
                </value>
                <value>
                    <fullName>Agencias de valores, administradores de fondos nacionales e internacionales</fullName>
                </value>
                <value>
                    <fullName>Caja de compensación</fullName>
                </value>
                <value>
                    <fullName>Compañías corredoras de bolsas de comercio</fullName>
                </value>
                <value>
                    <fullName>Compañías de fondos mutuos</fullName>
                </value>
                <value>
                    <fullName>Companías de leasing, factoring, créditos comerciales</fullName>
                </value>
                <value>
                    <fullName>Compañías de seguros</fullName>
                </value>
                <value>
                    <fullName>Créditos de consumo</fullName>
                </value>
                <value>
                    <fullName>Créditos en cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Créditos libre disponibilidad</fullName>
                </value>
                <value>
                    <fullName>Servicios Financieros</fullName>
                </value>
                <value>
                    <fullName>Sociedades de inversión</fullName>
                </value>
                <value>
                    <fullName>Sociedades de tarjetas de crédito</fullName>
                </value>
                <value>
                    <fullName>Sociedades financieras</fullName>
                </value>
                <value>
                    <fullName>Agricultura tradicional, cultivos anuales</fullName>
                </value>
                <value>
                    <fullName>Hortalizas, Flores y Rosa Mosqueta</fullName>
                </value>
                <value>
                    <fullName>Infraestructura predial</fullName>
                </value>
                <value>
                    <fullName>Otros productos agropecuarios</fullName>
                </value>
                <value>
                    <fullName>Industria de alimentos congelados</fullName>
                </value>
                <value>
                    <fullName>Industria de alimentos para animales</fullName>
                </value>
                <value>
                    <fullName>Industria de bebidas, jugos y licores</fullName>
                </value>
                <value>
                    <fullName>Industria de carnes</fullName>
                </value>
                <value>
                    <fullName>Industria de dulces conservas, frutas secas y galletas</fullName>
                </value>
                <value>
                    <fullName>Industria de los molinos, cereales</fullName>
                </value>
                <value>
                    <fullName>Industria de pastas, fideos</fullName>
                </value>
                <value>
                    <fullName>Industria de productos lácteos</fullName>
                </value>
                <value>
                    <fullName>Industria del aceite, margarina, mayonesa</fullName>
                </value>
                <value>
                    <fullName>Industria del azucar</fullName>
                </value>
                <value>
                    <fullName>Industria del tabaco</fullName>
                </value>
                <value>
                    <fullName>Industrias de cecinas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsegmento__c</fullName>
        <label>Subsegmento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mujer</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sucursal_BI__c</fullName>
        <label>Sucursal BI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal_Banco__c</fullName>
        <label>Sucursal Banco</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal_creaci_n_registro__c</fullName>
        <description>Este campo se completa con la Sucursal que el Ejecutivo que crea el registro tenga definida en su perfil.</description>
        <label>Sucursal creación registro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Susceptible_conflicto_de_interes__c</fullName>
        <label>Susceptible conflicto de interés</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pago de IVA´s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono_fijo_comercial_Inv__c</fullName>
        <description>Utilizado por Inversiones equivale a Phone estandar que utiliza el Banco</description>
        <label>Teléfono fijo comercial Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tiene_Cuenta_Corriente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requerido para informes Profin. Flow lo pega en Lead correspondiente.</description>
        <label>Tiene Cuenta Corriente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Ejecutivo_de_Cuenta__c</fullName>
        <description>Sí para indicar que tiene. Vacío si no.</description>
        <label>Tiene Ejecutivo de Cuenta</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiene_Ejecutivo_de_Inversiones__c</fullName>
        <description>Sí: para indicar que tiene. Vacío si no</description>
        <label>Tiene Ejecutivo de Inversiones</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiene_Garantia_Hipotecaria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requerido para informes Profin. Flow lo pega en Lead correspondiente.</description>
        <label>Tiene Garantía</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Margen_Hipotecario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requerido para informes Profin. Flow lo pega en Lead correspondiente.</description>
        <label>Tiene Margen Hipotecario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_Cliente_Gestion__c</fullName>
        <label>Tipo Cliente Gestión</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personas Naturales</fullName>
                </value>
                <value>
                    <fullName>Mediana Empresa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>